[WFLY-16718] Override the version of all the Jakarta package namespace Elytron dependencies brought in by wildfly-core
Jira issue: https://issues.redhat.com/browse/WFLY-16718

[WFLY-16718] Add wilfly-elytron dependency to standard-ee

[WFLY-16718] Mixed domain workaround

[WFLY-16718] Fix Elytron-integration dependency for integration/elytron testsuite

[WFLY-16718] Pending OIDC Elitron modules

[WFLY-16718] Fix Elytron dependencies for domain mode test suite

[WFLY-16718] Fix dependencies on testsuite domain

[WFLY-16718] Fix dependencies on mixed domain testsuite

--- a/clustering/el/expressly/pom.xml
+++ b/clustering/el/expressly/pom.xml
@@ -77,6 +77,15 @@
             <artifactId>wildfly-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-permission</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-security-manager-action</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
             <scope>provided</scope>
