--- a/ee-9/source-transform/datasources-agroal/pom.xml
+++ b/ee-9/source-transform/datasources-agroal/pom.xml
@@ -175,6 +175,11 @@
         </dependency>
         <dependency>
             <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-credential-store</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.security</groupId>
             <artifactId>wildfly-elytron-auth-server</artifactId>
         </dependency>
         <dependency>
