--- a/ee-9/source-transform/observability/opentelemetry-api/pom.xml
+++ b/ee-9/source-transform/observability/opentelemetry-api/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>jakarta.ws.rs-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-permission</artifactId>
+        </dependency>
+
         <!-- OpenTelemetry Deps -->
         <dependency>
             <groupId>io.opentelemetry</groupId>
