--- a/ee-9/source-transform/clustering/weld/web/pom.xml
+++ b/ee-9/source-transform/clustering/weld/web/pom.xml
@@ -107,6 +107,11 @@
             <scope>test</scope>
             <classifier>tests</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-security-manager-action</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
