--- a/ee-9/source-transform/microprofile/opentracing-smallrye/pom.xml
+++ b/ee-9/source-transform/microprofile/opentracing-smallrye/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>microprofile-config-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-permission</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${ee.maven.groupId}</groupId>
             <artifactId>wildfly-web-common-jakarta</artifactId>
             <exclusions>
