--- a/ee-9/source-transform/clustering/weld/ejb/pom.xml
+++ b/ee-9/source-transform/clustering/weld/ejb/pom.xml
@@ -92,6 +92,10 @@
             <artifactId>wildfly-common</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-permission</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.kohsuke.metainf-services</groupId>
             <artifactId>metainf-services</artifactId>
             <scope>provided</scope>
