--- a/ee-9/source-transform/microprofile/opentracing-extension/pom.xml
+++ b/ee-9/source-transform/microprofile/opentracing-extension/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>jakarta.enterprise.cdi-api</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.wildfly.security</groupId>
+            <artifactId>wildfly-elytron-permission</artifactId>
+        </dependency>
+
         <!-- Other deps consistent with the javax.* from parent module -->
         <dependency>
             <groupId>${full.maven.groupId}</groupId>
