--- a/testsuite/integration/elytron/src/test/resources/logging.properties
+++ b/testsuite/integration/elytron/src/test/resources/logging.properties
@@ -21,10 +21,10 @@
 #
 
 # Additional logger names to configure (root logger is always configured)
-loggers=
+loggers=org.wildfly.security
 
 # Root logger level
-logger.level=INFO
+logger.level=DEBUG
 
 # Root logger handlers
 logger.handlers=FILE
